infra/jenkins/2-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: jenkins
  name: jenkins
  namespace: ci
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - image: jenkins/jenkins:2.193-centos
        imagePullPolicy: IfNotPresent
        name: jenkins
        ports:
        - containerPort: 50000
        - containerPort: 8080
        - containerPort: 30202
        volumeMounts:
        - name: jenkins-persistent-storage
          mountPath: /var/jenkins_home
          subPath: jenkins_home
        - mountPath: /run/docker.sock
          name: docker-sock-volume
        - mountPath: /usr/bin/docker
          name: docker-bin
        - mountPath: /usr/bin/kubectl
          name: kubectl-bin
      restartPolicy: Always
      volumes:
        - name: jenkins-persistent-storage
          persistentVolumeClaim:
            claimName: claim-jenkins
        - name: docker-sock-volume
          hostPath:
            path: /var/run/docker.sock
            type: File
        - name: docker-bin
          hostPath:
            path: /usr/bin/docker
            type: File
        - name: kubectl-bin
          hostPath:
            path: /usr/bin/kubectl
            type: File
