infra/jenkins/3-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jenkins
  name: jenkins
  namespace: ci
spec:
  ports:
  - name: jenkins
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: jenkins-agent
    protocol: TCP
    port: 50000
    targetPort: 50000
  selector:
    app: jenkins
