infra/jenkins/4-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: ci
spec:
  rules:
  - host: jenkins.tozzi.fan
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
